[package]
name = "lbm"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
rayon = "1.5"
wgpu = "0.10"
winit = "0.25"
image = "0.23"
cgmath = "0.18"
env_logger = "0.9"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
 